...
    return (
        <Stack.Navigator initialRouteName='Home'
            screenOptions={{
                headerShown: false, // Vì bạn đã dùng MobileLayout có header riêng rồi
            }}>
            <Stack.Screen name="Home" component={HomeScreen} />
            <Stack.Screen name="Profile" component={ProfileScreen} />

            <Stack.Screen name="RegisterShop" component={RegisterShopScreen} />
            <Stack.Screen name="MyShop" component={ShoDetailScreen} />
            <Stack.Screen name="ShopDashboard" component={ShopDashboardScreen} />
            <Stack.Screen name="EditShop" component={EditShopScreen} />
            <Stack.Screen name="Packages" component={PackagesScreen} />
...
