...
                                    style={styles.outlineButton}
                                    textStyle={{ color: '#10b981' }}
                                >
                                    Xem thống kê
                                </Button>
                                <Button
                                    testID="my-shop-create-post-button"
                                    variant="outline"
                                    onPress={() => navigation.navigate('CreatePost')}
                                    style={styles.outlineButton}
                                    textStyle={{ color: '#10b981' }}
                                >
                                    Đăng tin mới
...
